[package]
name = "lang"
version = "0.1.0"
authors = ["Alberto Corona <albcoron@gmail.com>"]
edition = "2018"

[dependencies]
failure = "*"
clap = { version = "2.32.0", features = ["yaml"] }
fern = "*"
log = "*"

[lib]
name = "lang"
path = "lib/lib.rs"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "lib"
harness = false