[package]
name = "lang"
version = "0.1.0"
authors = ["Alberto Corona <albcoron@gmail.com>"]
edition = "2018"

[dependencies]
failure = "*"
clap = { version = "2.32.0", features = ["yaml"] }
log = "*"
env_logger = "*"
nom = "5.0.1"
lazy_static = "*"
bytecount = { version = "0.6.0" }

[lib]
name = "lang"
path = "lib/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lib"
harness = false

[features]
default = ["runtime-dispatch-simd"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
